--- a/LargeMon Go/LargeMon Go.vcxproj
+++ b/LargeMon Go/LargeMon Go.vcxproj
@@ -146,12 +146,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LargeMon.h" />
+    <ClInclude Include="LargeMonGenerator.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LargeMon Go.cpp" />
     <ClCompile Include="LargeMon.cpp" />
+    <ClCompile Include="LargeMonGenerator.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
