--- a/LargeMon Go/LargeMon Go.vcxproj.filters
+++ b/LargeMon Go/LargeMon Go.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Containers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AllLargeMons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Containers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AllLargeMons.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
