--- a/LargeMon Go/LargeMon Go.vcxproj
+++ b/LargeMon Go/LargeMon Go.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Containers.h" />
     <ClInclude Include="LargeMon.h" />
     <ClInclude Include="LargeMonGenerator.h" />
+    <ClInclude Include="MenuUI.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClCompile Include="LargeMon Go.cpp" />
     <ClCompile Include="LargeMon.cpp" />
     <ClCompile Include="LargeMonGenerator.cpp" />
+    <ClCompile Include="MenuUI.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
