--- a/LargeMon Go/LargeMon Go.vcxproj.filters
+++ b/LargeMon Go/LargeMon Go.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="AllLargeMons.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MenuUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AllLargeMons.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
