--- a/LargeMon Go/LargeMon Go.vcxproj.filters
+++ b/LargeMon Go/LargeMon Go.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="MenuUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Battle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MenuUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Battle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
