--- a/LargeMon Go/LargeMon Go.vcxproj.filters
+++ b/LargeMon Go/LargeMon Go.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Battle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Turn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Battle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Turn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
